<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:text="@string/Principal_Input"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />


    <EditText
        android:id="@+id/Principal"
        android:hint="@string/hint_Principal"
        android:layout_width="231dp"
        android:layout_height="50dp"
        android:autofillHints="no"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@id/textView3"
        app:layout_constraintRight_toLeftOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="#673AB7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="92dp"
            android:background="#673AB7"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textColorLink="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvInterestLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="320dp"
        android:text="@string/IR"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/tvInterestValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="265dp"
        android:text="@string/_10_00"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvInterestLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/seekInterest"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:max="2000"
        app:layout_constraintTop_toBottomOf="@id/tvInterestLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/LTSelection"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekInterest" />

    <RadioGroup
        android:id="@+id/selectGr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Selection">

        <RadioButton
            android:id="@+id/y15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_15_years" />

        <RadioButton
            android:id="@+id/y20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_20_years" />

        <RadioButton
            android:id="@+id/y30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30_years" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/taxesAndInsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taxes_insurance"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/selectGr"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/Calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/calculate"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taxesAndInsurance" />

    <Button
        android:id="@+id/Uninstall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/uninstall"
        app:cornerRadius="0dp"
        app:layout_constraintLeft_toRightOf="@id/Calculate"
        app:layout_constraintTop_toBottomOf="@id/taxesAndInsurance" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/press_calculate"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/Uninstall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>